Work mobile carousel (swipe+lock), auto-activate previews on mobile, agent boot->10-line chat, per-project uniqueness; deploy helpers (npm script, VS Code task, CI).

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build && next-sitemap",
     "start": "next start",
   "optimize:images": "node scripts/optimize-images.mjs",
+    "deploy:prod": "netlify deploy --prod",
     "sitemap": "next-sitemap",
     "lint": "eslint"
   },
