--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 [build]
   command = "npm run build"
 
-[context.production.environment]
-  NODE_VERSION = "18"
+[build.environment]
+  # Next.js 16 requires Node >= 20.9.0. Pin to 20.10.0 for Netlify builds.
+  NODE_VERSION = "20.10.0"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
