--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ownly-studio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.9.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build && next-sitemap",
