feat: Complete enterprise admin dashboard with modern glass morphism UI
- Redesigned AdminSidebar with liquid glass/high-tech aesthetic
- Refactored all major endpoints (projects, invoices, payments, subscriptions) to REST APIs
- Implemented keyless server authentication with ID token verification
- Added comprehensive admin functionality: analytics, client management, billing
- Removed unused pages and streamlined navigation
- Enhanced Firestore security rules for multi-tenant org structure
- Successfully deployed modernized dashboard to production

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,15 +1,37 @@
 {
-  "version": "2.0.0",
-  "tasks": [
-    {
-      "label": "Build & Deploy (Netlify prod)",
-      "type": "shell",
-      "command": "npm run build; netlify deploy --prod",
-      "group": "build",
-      "problemMatcher": ["$eslint-stylish"],
-      "options": {
-        "cwd": "${workspaceFolder}"
-      }
-    }
-  ]
+	"version": "2.0.0",
+	"tasks": [
+		{
+			"label": "Build & Deploy (Netlify prod)",
+			"type": "shell",
+			"command": "npm run build; netlify deploy --prod",
+			"group": "build",
+			"problemMatcher": [
+				"$eslint-stylish"
+			],
+			"options": {
+				"cwd": "${workspaceFolder}"
+			}
+		},
+		{
+			"label": "Build & Deploy (Netlify prod)",
+			"type": "shell",
+			"command": "npm run build; netlify deploy --prod"
+		},
+		{
+			"label": "Build & Deploy (Netlify prod)",
+			"type": "shell",
+			"command": "npm run build; netlify deploy --prod"
+		},
+		{
+			"label": "Build & Deploy (Netlify prod)",
+			"type": "shell",
+			"command": "npm run build; netlify deploy --prod"
+		},
+		{
+			"label": "Build & Deploy (Netlify prod)",
+			"type": "shell",
+			"command": "npm run build; netlify deploy --prod"
+		}
+	]
 }
