--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "dev": "next dev",
     "build": "next build && next-sitemap",
     "start": "next start",
-  "optimize:images": "node scripts/optimize-images.mjs",
+    "optimize:images": "node scripts/optimize-images.mjs",
     "deploy:prod": "netlify deploy --prod",
     "sitemap": "next-sitemap",
     "lint": "eslint"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@stripe/stripe-js": "^8.1.0",
+    "@react-pdf/renderer": "^4.3.1",
+    "@stripe/stripe-js": "^8.3.0",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
+    "jose": "^5.10.0",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.546.0",
     "next": "16.0.0",
     "react": "19.2.0",
@@ -34,7 +39,7 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.14.3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.24",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
